adds gui & cli launch4j config adds new icons new section about exe launcher in readme