@@ -6,7 +6,7 @@
 
     <groupId>at.favre.tools</groupId>
     <artifactId>dconvert</artifactId>
-    <version>1.0.0-alpha1</version>
+    <version>1.0.0-alpha2</version>
 
     <prerequisites>
         <maven>3.1.0</maven>
@@ -119,7 +119,7 @@
                 <configuration>
                     <!-- Travis build workaround -->
                     <argLine>${argLine} -Xms1024m -Xmx2048m</argLine>
-                    <skipTests>false</skipTests>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
             <plugin>
@@ -127,6 +127,51 @@
                 <artifactId>launch4j-maven-plugin</artifactId>
                 <version>1.7.15</version>
                 <executions>
+                    <execution>
+                        <id>l4j-gui</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <headerType>gui</headerType>
+                            <outfile>target/dconvert-gui.exe</outfile>
+                            <!--<icon>icon.ico</icon>-->
+                            <jar>target/${project.artifactId}-${project.version}.jar</jar>
+                            <errTitle>dconvert</errTitle>
+                            <icon>misc/icon.ico</icon>
+                            <classPath>
+                                <mainClass>at.favre.tools.dconvert.Main</mainClass>
+                                <addDependencies>false</addDependencies>
+                                <preCp>anything</preCp>
+                            </classPath>
+                            <jre>
+                                <minVersion>1.8.0</minVersion>
+                                <opts>
+                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                                </opts>
+                            </jre>
+                            <!--<splash>-->
+                            <!--<file>misc/splash.bmp</file>-->
+                            <!--<waitForWindow>false</waitForWindow>-->
+                            <!--<timeout>1</timeout>-->
+                            <!--<timeoutErr>false</timeoutErr>-->
+                            <!--</splash>-->
+                            <versionInfo>
+                                <fileVersion>0.0.0.1</fileVersion>
+                                <txtFileVersion>0.0.0.1</txtFileVersion>
+                                <fileDescription>A tool that enables advanced features through adb
+                                </fileDescription>
+                                <copyright>Patrick Favre-Bulle, 2016</copyright>
+                                <productVersion>1.0.0.0</productVersion>
+                                <txtProductVersion>${project.version}</txtProductVersion>
+                                <productName>Multi Platform Density Converter</productName>
+                                <internalName>${project.artifactId}</internalName>
+                                <originalFilename>dconvert-gui.exe</originalFilename>
+                                <language>EN</language>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
                     <execution>
                         <id>l4j-clui</id>
                         <phase>package</phase>
@@ -139,7 +184,7 @@
                             <!--<icon>icon.ico</icon>-->
                             <jar>target/${project.artifactId}-${project.version}.jar</jar>
                             <errTitle>dconvert</errTitle>
-                            <icon>icon.ico</icon>
+                            <icon>misc/icon_terminal.ico</icon>
                             <classPath>
                                 <mainClass>at.favre.tools.dconvert.Main</mainClass>
                                 <addDependencies>false</addDependencies>
